--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,7 @@
   padding: 0;
   margin: 0;
 }
+
+html {
+  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+}
