--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,10 +1,13 @@
+@import "./variables.scss";
+
 .navbar { 
     height: 90px;
-    background-color: #0f051d;
+    background-color: $nav-main;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    border-bottom: 1px solid rgba(151, 151, 151, 0.685);
 
     img {
         height: 80px;
