--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -14,6 +14,27 @@
   
 }
 
+.trending {
+  display: flex;
+  gap: 2rem;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+    h4 {
+      color: rgb(149, 149, 149);
+      font-size: 13px;
+    }
+
+    p {
+      font-size: 12px;
+    }
+
+  }
+}
+
 
 .first-banner > * {
     margin-bottom: 2rem;
