--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./styles/variables.scss";
+
 * {
   padding: 0;
   margin: 0;
@@ -5,4 +7,5 @@
 
 html {
   font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  background-color: $bg-main;
 }
