--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -3,9 +3,9 @@
 .first-banner {
   background-color: $bg-main;
   color: $white;
-  padding: 1rem;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 0 0 1rem 0;
+  width: 100%;
 
   ul {
     list-style: none;
@@ -17,6 +17,11 @@
 .trending {
   display: flex;
   gap: 2rem;
+  width: 100%;
+  height: 60px;
+  align-items: center;
+  border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+  
 
   div {
     display: flex;
@@ -31,8 +36,11 @@
     p {
       font-size: 12px;
     }
-
   }
+}
+
+#first {
+  margin-left: 2rem;
 }
 
 
