--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -2,7 +2,7 @@
 
 .navbar { 
     height: 90px;
-    background-color: $nav-main;
+    background-color: $bg-deep;
     width: 100%;
     display: flex;
     align-items: center;
