--- a/src/App.scss
+++ b/src/App.scss
@@ -7,5 +7,5 @@
 
 html {
   font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
-  background-color: $bg-main;
+  background-color: rgb(11, 40, 77);
 }
