--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -1,7 +1,8 @@
 @import "variables.scss";
 
 .first-banner {
-  background-color: $bg-main;
+  background: rgb(18,26,48);
+  background: linear-gradient(180deg, rgba(18,26,48,1) 0%, rgb(11, 40, 77) 100%);
   color: $white;
   text-align: center;
   margin: 0 0 1rem 0;
