Added number formatting for API data

--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -2,7 +2,7 @@
 
 .first-banner {
   background: rgb(18,26,48);
-  background: linear-gradient(180deg, rgba(18,26,48,1) 0%, rgb(11, 40, 77) 100%);
+  background: linear-gradient(180deg, #0B1426 0%, rgb(11, 40, 77) 100%);
   color: $white;
   text-align: center;
   margin: 0 0 1rem 0;
