--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -48,7 +48,14 @@
   margin: 0 auto;
 
   h1 {
-    font-size: calc(1vw + 30px);
+    font-size: calc(1.5vw + 30px);
+    transform: scaleY(1.1);
+
+    span{
+      -webkit-background-clip: text;
+      background-image: linear-gradient(298deg, rgba(0,234,255,1) 0%, rgba(0,111,255,1) 99%, rgba(35,130,255,1) 100%);
+      color: transparent;
+    }
   }
 
   h2 { 
@@ -57,10 +64,11 @@
 
   ul {
     color: $white;
+    
     li {
-      margin: 1rem;
-      margin-left: 2.5rem;
+      margin: 2rem 3rem;
       position: relative;
+      width: fit-content;
 
       span {
         color: rgb(0, 157, 255);
@@ -84,7 +92,43 @@
   margin-bottom: 2rem;
 }
 
+.coin-base{
+  display: flex;
+  flex-wrap: wrap;
+  color: $white;
+  background-color: $bg-deep;
+  margin-top: 5rem;
+  padding: 4rem;
 
+  div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  h2{
+    margin-bottom: 3rem;
+    font-weight: 600;
+  }
+}
+
+.heading{
+  display: flex;
+  justify-content: space-around;
+  background-color: $bg-main;
+
+  .initial{
+    margin-left: 4rem;
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+.row{
+  border-bottom: 1px solid $white;
+  padding: 1rem;
+  background-color: $bg-light;
+}
 
 #first {
   margin-left: 2rem;
