--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -19,7 +19,7 @@
   display: flex;
   gap: 2rem;
   width: 100%;
-  height: 60px;
+  height: 50px;
   align-items: center;
   border-bottom: 1px solid rgba(151, 151, 151, 0.685);
   background-color: $bg-deep;
@@ -28,7 +28,7 @@
 
   div {
     display: flex;
-    flex-direction: column;
+    gap: 5px;
     text-align: left;
 
     h4 {
@@ -46,6 +46,7 @@
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 5rem;
 
   h1 {
     font-size: calc(1.5vw + 30px);
@@ -64,11 +65,14 @@
 
   ul {
     color: $white;
-    
+    display: flex;
+    flex-direction: column;
+
     li {
       margin: 2rem 3rem;
       position: relative;
       width: fit-content;
+      font-size: 20px;
 
       span {
         color: rgb(0, 157, 255);
@@ -76,11 +80,11 @@
         position: absolute;
         left: -2rem;
         top: -2px;
-
-
+        
         svg {
           background-color: white;
           border-radius: 50%;
+
         }
       }
     }
@@ -91,47 +95,4 @@
 .catch > * {
   margin-bottom: 2rem;
 }
-
-.coin-base{
-  display: flex;
-  flex-wrap: wrap;
-  color: $white;
-  background-color: $bg-deep;
-  margin-top: 5rem;
-  padding: 4rem;
-
-  div{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-  }
-
-  h2{
-    margin-bottom: 3rem;
-    font-weight: 600;
-  }
-}
-
-.heading{
-  display: flex;
-  justify-content: space-around;
-  background-color: $bg-main;
-
-  .initial{
-    margin-left: 4rem;
-    display: flex;
-    gap: 2rem;
-  }
-}
-
-.row{
-  border-bottom: 1px solid $white;
-  padding: 1rem;
-  background-color: $bg-light;
-}
-
-#first {
-  margin-left: 2rem;
-}
-
 
