--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -41,6 +41,71 @@
     }
 }
 
+.coin-base{
+    display: flex;
+    flex-wrap: wrap;
+    color: $white;
+    background-color: $bg-deep;
+    margin-top: 8rem;
+    padding: 4rem;
+  
+    div{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+    }
+  
+    h2{
+      margin-bottom: 3rem;
+      font-weight: 600;
+    }
+  }
+  
+  .heading{
+    display: flex;
+    justify-content: space-around;
+    background-color: $bg-main;
+    height: 40px;
+    border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+  }
+
+  .initial{
+    margin-left: 4rem;
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  }
+
+  .other-heading{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    gap: 8rem;
+    align-items: center;
+    margin-right: 3rem;
+  }
+
+  .other-heading > *{
+    font-weight: 500;
+    white-space: nowrap;
+  }
+  
+  .row{
+    border-bottom: 1px solid $white;
+    padding: 1rem;
+    background-color: $bg-light;
+    border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+
+
+    img {
+        width: 50px;
+        height: 50px;
+    }
+  }
+  
+  #first {
+    margin-left: 2rem;
+  }
+  
 .green{
     color: rgb(1, 222, 1);
 
