--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -49,12 +49,6 @@
     margin-top: 8rem;
     padding: 4rem;
   
-    div{
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-    }
-  
     h2{
       margin-bottom: 3rem;
       font-weight: 600;
@@ -62,52 +56,85 @@
   }
   
   .heading{
-    display: flex;
-    justify-content: space-around;
     background-color: $bg-main;
-    height: 40px;
+    height: 10px;
     border-bottom: 1px solid rgba(151, 151, 151, 0.685);
-  }
-
-  .initial{
-    margin-left: 4rem;
-    display: flex;
-    gap: 2rem;
-    align-items: center;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  }
-
-  .other-heading{
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    gap: 8rem;
-    align-items: center;
-    margin-right: 3rem;
-  }
-
-  .other-heading > *{
-    font-weight: 500;
-    white-space: nowrap;
-  }
-  
-  .row{
-    border-bottom: 1px solid $white;
+    display: grid;
+    width: 100%;
+    text-align: right;
+    grid-template-columns: 100px 150px 1fr 1fr 1.25fr;
     padding: 1rem;
-    background-color: $bg-light;
-    border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+    place-content: center;
 
-
-    img {
-        width: 50px;
-        height: 50px;
+    h3{
+        font-weight: 400;
     }
   }
+  
+  .first-head{
+    text-align: left;
+    margin-left: 2rem;
+  }
+
+  .row{
+    border-bottom: 1px solid $white;
+    background-color: $bg-light;
+    border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+    display: grid;
+    grid-template-columns: 50px 200px 1fr 1fr 1.25fr;
+    width: 100%;
+    text-align: right;
+    padding: .5rem;
+
+    img {
+        width: 40px;
+    }
+    
+    h3 {
+        height: fit-content;
+        align-self: center;
+    }
+  }
+
+
+
+  .identifier{
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
+    width: 100%;
+    gap: .5rem;
+    text-align: left;
+
+    div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 0rem;
+
+        h2{
+            margin: 0;
+            font-weight: 500;
+        }
+
+        h3 {
+            align-self: start;
+            font-weight: 300;
+            font-size: 17px;
+            color: rgba(255, 255, 255, 0.796);
+        }
+    }
+  }
+
   
   #first {
     margin-left: 2rem;
   }
   
 .green{
-    color: rgb(1, 222, 1);
+    color: #00a666;
 
     &::before{
         content: "+";
@@ -115,9 +142,28 @@
 }
 
 .red{
-    color: rgb(255, 0, 0);
+    color: #D9475A;
+}
 
-    &::before{
-        content: "-";
+.css-1oj2twp-MuiPagination-root{
+    margin: 2rem auto !important;
+}
+
+.css-wjh20t-MuiPagination-ul {
+
+    li {
+        button {
+            color: $white;
+        }
+
+        div {
+            color: $white;
+        }
+
+        &:active{
+            button {
+                color: $white;
+            }
+        }
     }
 }
