--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -7,6 +7,7 @@
   text-align: center;
   margin: 0 0 1rem 0;
   width: 100%;
+  padding-top: 80px;
 
   ul {
     list-style: none;
@@ -22,8 +23,11 @@
   height: 50px;
   align-items: center;
   border-bottom: 1px solid rgba(151, 151, 151, 0.685);
+  border-top: 1px solid rgba(151, 151, 151, 0.685);
   background-color: $bg-deep;
   margin-bottom: 2rem;
+  position: fixed;
+  z-index: 999;
   
 
   div {
@@ -46,7 +50,7 @@
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-top: 11rem;
 
   h1 {
     font-size: calc(1.5vw + 30px);
@@ -94,5 +98,9 @@
 
 .catch > * {
   margin-bottom: 2rem;
+}
+
+.hash{
+  margin-inline-start: 1.45rem !important;
 }
 
