--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -46,7 +46,7 @@
     flex-wrap: wrap;
     color: $white;
     background-color: $bg-deep;
-    padding: 4rem;
+    padding: 3rem;
   
     h2{
       margin-bottom: 3rem;
@@ -60,12 +60,12 @@
     border-bottom: 1px solid rgba(151, 151, 151, 0.685);
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     display: grid;
-    width: 100%;
+    width: 100% !important;
     text-align: right;
     grid-template-columns: 100px 150px 1fr 1fr 1.25fr;
     padding: 1rem;
     place-content: center;
-
+    
     h3{
         font-weight: 400;
     }
@@ -94,6 +94,10 @@
         height: fit-content;
         align-self: center;
         font-weight: 400;
+    }
+
+    &:hover{
+        background-color: #ffffff35
     }
   }
 
@@ -167,3 +171,8 @@
     color: #D9475A;
 }
 
+.row-link{
+    text-decoration: none;
+    color: $white;
+    width: 100%;
+}
