--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -10,6 +10,7 @@
     justify-content: space-around;
     width: 75%;
     margin: 0 auto;
+    padding-top: 2rem;
 
     div {
         margin-top: 3rem;
