--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -1,6 +1,6 @@
 .join-banner{
-    background: radial-gradient(circle, rgba(8,4,60,1) 0%, rgba(11,20,38,1) 63%);
-    height: 200vh;
+    background: radial-gradient(circle, rgba(55,25,150,1) 0%, rgba(11,20,38,1) 74%);
+    height: 180vh;
     width: 100%;
     position: relative;
 }
@@ -11,9 +11,15 @@
     left: 100%;
     width: fit-content;
     transform: translateX(300px);
+    transition: all 0.75s ease-in-out;
 
     img {
         width: 480px;
         border-radius: 10px;
     }
+}
+
+.card-translation{
+    transform: translateX(20px);
+    transition: all 0.75s ease-in-out;
 }
