--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -1,5 +1,5 @@
 .join-banner{
-    background: radial-gradient(circle, rgba(55,25,150,1) 0%, rgba(11,20,38,1) 74%);
+    background: radial-gradient(circle, rgba(63,0,115,1) 0%, rgba(11,20,38,1) 50%);
     height: 180vh;
     width: 100%;
     position: relative;
@@ -22,4 +22,8 @@
 .card-translation{
     transform: translateX(20px);
     transition: all 0.75s ease-in-out;
+}
+
+.second-card{
+    height: 100vh;
 }
