--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,24 @@ html {
   color: #4194ec00;
   overflow-x: hidden;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #4194ec #f2f2f2;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #f2f2f2;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #4194ec;
+    border-radius: 19px;
+  }
