--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -1,4 +1,25 @@
+.individual-page{
+    background: linear-gradient(90deg, rgba(11,20,38,1) 0%, rgba(29,86,119,1) 100%);
+    height: 100vh;
+}
+
 .coin-description{
     color: white;
     padding-top: 150px;
+    width: 75%;
+    margin: 0 auto;
+
+    ul {
+        list-style: none;
+    }
+}
+
+.intro-coin{
+    display: flex;
+    flex-direction: column;
+    
+
+    img {
+        align-self: center;
+    }
 }
