--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -85,12 +85,12 @@
     text-align: center;
 
     h2 {
-        font-size: 3rem;
+        font-size: 3.5rem;
         letter-spacing: 3px;
     }
 
     h1 {
-        font-size: 10rem;
+        font-size: calc(7rem + 4vw);
         -webkit-background-clip: text;
         background-image: linear-gradient(298deg, rgb(0, 234, 255) 0%, rgb(0, 111, 255) 99%, rgb(35, 130, 255) 100%);
         color: transparent;
@@ -102,7 +102,7 @@
         &::after {
             content: "per year paid in USDC";
             color: white;
-            font-size: 1.25rem;
+            font-size: 1.5rem;
             width: fit-content;
             white-space: nowrap;
             left: 50%;
@@ -116,7 +116,7 @@
         font-size: 1.25rem;
         position: absolute;
         bottom: 34px;
-        right: -38px;
+        right: -40px;
         color: #4194ec;
     }
 }
@@ -147,12 +147,13 @@
         margin-bottom: 1rem;
 
         span {
-            font-size: 2.5rem;
+            font-size: 2.75rem;
         }
     }
 
     h4 {
         text-align: center;
+        font-size: 1.2rem;
     }
 }
 
@@ -164,12 +165,13 @@
         margin-bottom: 1rem;
 
         span {
-            font-size: 2.5rem;
+            font-size: 2.75rem;
         }
     }
 
     h4 {
         text-align: center;
+        font-size: 1.2rem;
     }
 }
 
@@ -222,19 +224,20 @@
 
         img {
             width: 200px;
-            margin: 0 auto 1rem auto;
+            margin: 0 auto 2.5rem auto;
 
         }
 
         h3 {
             font-size: 2rem;
             font-weight: 600;
-            color: #4194ec;
+            
         }
 
         h2 {
             font-size: calc(3rem + 3vw);
             font-weight: 600;
+            color: #4194ec;
         }
 
         p {
