Conditional rendering in individual coin page

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -10,6 +10,7 @@
     border-bottom: 1px solid rgba(151, 151, 151, 0.685);
     position: fixed;
     z-index: 999;
+    top: 0;
 
     img {
         height: 40px;
