--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -1,25 +1,64 @@
 .individual-page{
     background: linear-gradient(90deg, rgba(11,20,38,1) 0%, rgba(29,86,119,1) 100%);
-    height: 100vh;
+    height: 100%;
 }
 
 .coin-description{
     color: white;
-    padding-top: 150px;
     width: 75%;
-    margin: 0 auto;
+    margin: 0 auto 0 auto;
 
-    ul {
-        list-style: none;
+    p {
+        padding-bottom: 15rem;
+        text-indent: 5rem;
     }
 }
 
 .intro-coin{
     display: flex;
     flex-direction: column;
-    
+    gap: 1rem;
 
     img {
         align-self: center;
+        margin-top: 10rem;
+        position: relative;
     }
+
+    h2 {
+        text-align: center;
+        font-size: 1.5rem;
+        position: relative;
+        margin-bottom: 2rem;
+        width: 100%;
+
+        &::after{
+            content: "";
+            position: absolute;
+            width: 80%;
+            height: 2px;
+            background-color: #ffffff;
+            bottom: -1rem;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    h1 {
+        align-self: center;
+        font-size: 3rem;
+
+        span {
+            color: #9d9d9d;
+            font-size: 20px;
+        }
+    }
+
+    h4 {
+        margin-bottom: 2rem;
+    }
+}
+
+.intro-coin > *{
+    font-weight: 500;
 }
