--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -1,6 +1,7 @@
 .individual-page{
     background: linear-gradient(90deg, rgba(11,20,38,1) 0%, rgba(29,86,119,1) 100%);
     height: 100%;
+    min-height: 100vh;
 }
 
 .coin-description{
@@ -35,12 +36,24 @@
         &::after{
             content: "";
             position: absolute;
-            width: 80%;
-            height: 2px;
+            width: 0%;
+            height: 4px;
+            border-radius: 2px;
             background-color: #ffffff;
             bottom: -1rem;
             left: 50%;
             transform: translateX(-50%);
+            animation: line-anim 1s ease-in-out forwards;
+        }
+    }
+
+    @keyframes line-anim {
+        0% {
+            width: 0%;
+        }
+
+        100% {
+            width: 80%;
         }
     }
 
