More data for individual coin + navbar

--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -99,3 +99,10 @@
         height: 24px;
     }
 }
+
+.rates{
+    display: flex;
+    justify-content: space-around;
+    margin: 2rem;
+    font-size: 2rem;
+}
