--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -13,6 +13,7 @@
         padding-bottom: 15rem;
         text-indent: 5rem;
         font-size: 1.25rem;
+        line-height: 2rem;
 
         a {
             color: rgb(171, 254, 255);
@@ -31,6 +32,8 @@
         align-self: center;
         margin-top: 10rem;
         position: relative;
+        width: 250px;
+        aspect-ratio: 1/1;
     }
 
     h2 {
