--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -60,9 +60,9 @@
   margin-top: 11rem;
 
   h1 {
-    font-size: calc(1.5vw + 30px);
+    font-size: calc(1.5vw + 33px);
     transform: scaleY(1.1);
-
+    font-weight: 500;
     span {
       -webkit-background-clip: text;
       background-image: linear-gradient(298deg, rgba(0, 234, 255, 1) 0%, rgba(0, 111, 255, 1) 99%, rgba(35, 130, 255, 1) 100%);
@@ -72,6 +72,7 @@
 
   h2 {
     font-size: calc(.75vw + 20px);
+    font-weight: 400;
   }
 
   ul {
