--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -30,7 +30,7 @@
 
     img {
         align-self: center;
-        margin-top: 10rem;
+        margin-top: 5rem;
         position: relative;
         width: 250px;
         aspect-ratio: 1/1;
@@ -105,7 +105,7 @@
 
 .rates{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 2rem;
-    font-size: 2rem;
+    font-size: 1.25rem;
 }
