--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -19,13 +19,13 @@
     }
 
     &::after {
-        content: "asd";
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
-        width: 200vw;
+        width: 250vw;
         height: 55vh;
-        background: linear-gradient(0deg, #0b1426 0%, #003f5f 25%, #0b1426 86%);
+        background: linear-gradient(0deg, #003f5f 25%, #0b1426 86%);
         z-index: -1;
         transform: translateX(-50%);
         overflow-y: hidden !important;
@@ -252,4 +252,16 @@
 
 .extra {
     height: 100vh;
+}
+
+.rewards-h1{
+    margin: 5rem 0 10rem 0;
+    text-align: center;
+    font-weight: 500;
+    font-size: 3rem;
+    -webkit-background-clip: text;
+    background-image: linear-gradient(298deg, rgba(0, 234, 255, 1) 0%, rgba(0, 111, 255, 1) 99%, rgba(35, 130, 255, 1) 100%);
+    color: transparent;
+    letter-spacing: 3px;
+    opacity: 0;
 }
