--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -257,11 +257,34 @@
 .rewards-h1{
     margin: 5rem 0 10rem 0;
     text-align: center;
-    font-weight: 500;
-    font-size: 3rem;
+    font-weight: 600;
+    font-size: 4rem;
     -webkit-background-clip: text;
     background-image: linear-gradient(298deg, rgba(0, 234, 255, 1) 0%, rgba(0, 111, 255, 1) 99%, rgba(35, 130, 255, 1) 100%);
     color: transparent;
     letter-spacing: 3px;
     opacity: 0;
+}
+
+#earning-button{
+    width: 100%;
+    display: flex;
+    
+    button{
+        background-color: transparent;
+        padding: 1.5rem 5rem;
+        border-radius: 50px;
+        border: 1px solid white;
+        margin: 2rem auto;
+        font-size: 1.5rem;
+        color: white;
+        text-align: center;
+        width: 400px;
+        transition: all .5s ease-in-out;
+        cursor: pointer;
+
+        &:hover{
+            background-color: rgba(87, 87, 87, 0.395)
+        }
+    }
 }
