First version desktop complete...?

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ html {
   background-color: #0b1426;
   color: #4194ec00;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 /* ===== Scrollbar CSS ===== */
