--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     position: relative;
     z-index: 9999999;
-    margin-top: 5vh;
+    width: 100%;
     color: rgb(182, 182, 182);
     background-color: #141d35;
     border-top: 1px solid rgb(124, 124, 124);
