--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -33,5 +33,33 @@
         gap: 4rem;
         font-size: 1.2rem;
         font-weight: 300;
+        
+        a{
+            text-decoration: none;
+            color: inherit;
+            position: relative;
+
+            &::after{
+                content: "";
+                width: 0%;
+                background:  linear-gradient(298deg, rgb(0, 234, 255) 0%, rgb(0, 111, 255) 99%, rgb(35, 130, 255) 100%);
+                height: 2px;
+                position: absolute;
+                bottom: -5px;
+                left: 0;
+                transition: .5s all ease-in-out;
+            }
+    
+            &:hover{
+    
+    
+                &::after{
+                    content: "";
+                    width: 100%;
+                    transition: .5s all ease-in-out;
+                }
+            }
+        }
     }
 }
+
