--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -53,6 +53,11 @@
             &:first-child {
                 color: white;
                 margin-bottom: 1rem;
+                cursor: auto;
+
+                &:hover{
+                    text-decoration: none;
+                }
             }
         }
 
@@ -65,4 +70,37 @@
     width: 100%;
     height: 1px;
     margin: 2rem 0 2rem 0;
+}
+
+@media (max-width: 600px){
+    .links {
+        display: flex;
+        padding: 1rem;
+        justify-content: center;
+        flex-wrap: wrap;
+        
+        div {
+            width: fit-content;
+            margin-bottom: 3rem;
+            flex: 0 0 50%;
+
+            ul{
+                width: fit-content;
+                margin: 0 auto;
+                align-items: center;
+
+            }
+        }
+    }
+
+    .copyright{
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .legal{
+        padding: .75rem;
+        margin-top: 2rem;
+    }
+
 }
