--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -225,7 +225,7 @@
         text-align: center;
 
         img {
-            width: 200px;
+            width: 150px;
             margin: 0 auto 2.5rem auto;
 
         }
@@ -299,7 +299,6 @@
 #arrow{
     position: absolute;
     transform: translate(10px, 3px) scale(1.35);
-    
 }
 
 #rewards{
@@ -307,3 +306,91 @@
     top: -140px;
 }
 
+@media (max-width: 1000px){
+
+    .card-translation{
+        transform: translateX(150px);
+    }
+
+    .first-text{
+        width: 75%;
+        backdrop-filter: blur(5px);
+        border-radius: 20px;
+        background-color:  rgba(1, 1, 1, 0.7);
+        padding: 2rem 4rem;
+        margin: 10rem auto 0 auto;
+    }
+
+    .left, .right{
+        
+        h3{
+            font-size: 1rem;
+            text-align: center;
+
+            span{
+                font-size: 2rem;
+            }
+        }
+    }
+
+    .second-card{
+        width: 75%;
+        margin: 50vh auto 20rem auto;
+        backdrop-filter: blur(5px);
+        border-radius: 20px;
+        background-color: rgba(1, 1, 1, 0.7);
+        padding: 3rem 2rem
+    }
+}
+
+@media (max-width: 600px){
+
+    .first-text{
+        padding: 2rem 2rem;
+        width: 90%;
+    }
+
+    .main-text{
+
+        h1{
+
+            font-size: 6rem;
+
+            span{
+                right: -15px;
+                bottom: 20px;
+            }
+
+            &::after{
+                bottom: -35px;
+            }
+        }
+    }
+
+    .second-card{
+        width: 90%;
+    }
+
+    #earning-button{
+        width: 70%;
+        
+        button{
+            font-size: 1rem;
+            white-space: nowrap;
+        }
+    }
+
+    #arrow{
+        transform: translate(5px, -2px);
+    }
+
+    .icons{
+
+        div{
+
+            img{
+                width: 100px;
+            }
+        }
+    }
+}
