--- a/src/styles/individual-coin.scss
+++ b/src/styles/individual-coin.scss
@@ -88,18 +88,22 @@
 
 .back-btn{
     position: fixed;
-    top: 10rem;
-    left: 10rem;
+    top: 7rem;
+    left: 7rem;
     font-size: 1.5rem;
     color: #ffffff;
     transform: scale(3.0);
     z-index: 99;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.356);
+    border-radius: 50%;
 
     a{
         color: #ffffff;
         cursor: pointer;
         display: block;
         height: 24px;
+        padding: .25rem;
     }
 }
 
@@ -108,4 +112,29 @@
     justify-content: space-between;
     margin: 2rem;
     font-size: 1.25rem;
+}
+
+@media(max-width: 750px){
+    .coin-description{
+        width: 90%;
+    }
+
+    .back-btn{
+        top: 3rem;
+        left: 3rem;
+    }
+
+    .intro-coin{
+
+        img{
+            width: 200px;
+        }
+    }
+
+    .coin-description{
+
+        p{
+            font-size: 1.1rem;
+        }
+    }
 }
