--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -202,7 +202,7 @@
     letter-spacing: 2px;
 
     h1 {
-        font-size: calc(20px + 5vw);
+        font-size: calc(20px + 3vw);
         font-weight: 600;
     }
 
@@ -373,6 +373,7 @@
 
     #earning-button{
         width: 70%;
+        margin: 0 auto;
         
         button{
             font-size: 1rem;
