--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -115,7 +115,7 @@
   }
 
   .pag{
-
+    margin: 0 auto;
     nav{
 
         ul{
@@ -190,4 +190,30 @@
     text-decoration: none;
     color: $white;
     width: 100%;
+}
+
+@media(max-width: 960px){
+
+    .coin-base{
+        padding: 0;
+
+        h2{
+            margin: 1rem auto;
+        }
+    }
+    .api-table{
+        height: 720px;
+        width: 850px;
+        overflow-x: scroll !important;
+    }
+
+    .row{
+        width: 850px;
+    }
+
+    .heading{
+    display: none;
+    }
+
+
 }
