Changes to trending banner

--- a/src/styles/first-banner.scss
+++ b/src/styles/first-banner.scss
@@ -35,6 +35,7 @@
   margin-bottom: 2rem;
   position: fixed;
   z-index: 999;
+  
 
 
   div {
@@ -110,4 +111,39 @@
 
 .hash {
   margin-inline-start: 1.45rem !important;
+}
+
+@media(max-width: 600px){
+  .catch{
+    width: 95%;
+
+    h1{
+      font-size: 1.75rem;
+    }
+
+    h2{
+      font-size: 1.25rem;
+    }
+  }
+
+}
+
+@media(max-width:800px){
+  .trending{
+    justify-content: center;
+    div{
+      flex-direction: column;
+
+
+      h4{
+        white-space: nowrap;
+      }
+    }
+  }
+}
+
+@media(max-width: 620px){
+  .optional{
+    display: none !important;
+  }
 }
