--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 .navbar { 
-    height: 80px;
+    height: 70px;
     background-color: $bg-deep;
     width: 100%;
     display: flex;
@@ -11,7 +11,10 @@
     position: fixed;
     z-index: 999;
     top: 0;
+}
 
+.nav-container-mobile{
+    display: none;
 }
 
 .nav-container{
@@ -63,3 +66,61 @@
     }
 }
 
+.hide{
+    display: none;
+}
+
+@media(max-width: 900px){
+    .nav-container{
+        display: none;
+    }
+
+    .nav-container-mobile{
+        display: flex;
+        width: 80%;
+        justify-content: space-between;
+        align-items: center;
+        background-color: $bg-deep;
+        height: 100%;
+        img{
+            height: 40px;
+        }
+
+        li{
+            color: white;
+            list-style: none;
+            transform: scale(2);
+            cursor: pointer;
+        }
+    }
+
+    .mobile-ul{
+        display: flex;
+        top: 110px;
+        position: fixed;
+        width: 100%;
+        height: 220px;
+        background: #0B1426;
+        left: 0;
+        z-index: 999;
+        align-items: center;
+        flex-direction: column;
+        gap: 2rem;
+        transform: translateY(-320px);
+        transition: all .5s ease-in-out;
+        z-index: -1;
+        li {
+            width: fit-content; 
+            margin-top: 1.5rem;
+            a{
+                color: rgb(255, 255, 255);
+                text-decoration: none;
+            }
+        }
+    }
+
+    .shown{
+        transform: translateY(0px);
+        transition: all .5s ease-in-out;
+    }
+}
