Fixing pag margin

--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -115,9 +115,9 @@
   }
 
   .pag{
-    margin: 0 auto;
-    nav{
+    margin: 1rem auto 0 auto;
 
+    nav{
         ul{
             justify-content: center;
         }
