--- a/src/styles/join-banner.scss
+++ b/src/styles/join-banner.scss
@@ -330,7 +330,7 @@
         background-color:  rgba(1, 1, 1, 0.7);
         padding: 2rem 0;
         align-self: center;
-
+        margin-left: 0;
     }
 
     .left, .right{
