Adding scrollTo for navbar logo

--- a/src/styles/market-banner.scss
+++ b/src/styles/market-banner.scss
@@ -204,6 +204,7 @@
     .api-table{
         height: 720px;
         width: 850px;
+        margin: 0 auto;
         overflow-x: scroll !important;
     }
 
