--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -25,6 +25,7 @@
     max-width: 1000px;
 
     img {
+        cursor: pointer;
         height: 40px;
         width: auto;
     }
@@ -84,6 +85,7 @@
         height: 100%;
         img{
             height: 40px;
+            cursor: pointer;
         }
 
         li{
