--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
-$nav-main: #0f051d;
+
+//BLUES
 
 $bg-main: #141d35;
 
@@ -6,4 +7,16 @@ $bg-deep: #0B1426;
 
 $bg-light: #122640;
 
+$bg-mid: #0b284d;
+
+$bg-mid2: #122640;
+
+$text-gradient: linear-gradient(298deg,#00eaff,#006fff 99%,#2382ff);
+
+$text-blue: #4194ec;
+
+//OTHER
+
 $white: #fbfbfb;
+
+$nav-main: #0f051d;
