--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,5 @@
-@mixin table-grid (){
+@mixin table-grid ($color){
     display: grid;
     grid-template-columns: 50px 200px 1fr 1fr 1.25fr;
+    background-color: $color;
 }
