--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,8 @@ $bg-main: #141d35;
 
 $bg-deep: #0B1426;
 
+$bg-light2: #003f5f;
+
 $bg-light: #122640;
 
 $bg-mid: #0b284d;
@@ -18,5 +20,9 @@ $text-blue: #4194ec;
 //OTHER
 
 $white: #fbfbfb;
+
+$dimmed-white: #A0A9BE;
+
+//Not currently used...
 
 $nav-main: #0f051d;
