--- a/src/components/join-banner/join-banner.scss
+++ b/src/components/join-banner/join-banner.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .join-banner {
     width: 100%;
     position: relative;
@@ -37,7 +39,7 @@
         left: 0;
         width: 250vw;
         height: 625px;
-        background: linear-gradient(0deg, #003f5f 25%, #0b1426 95%);
+        background: linear-gradient(0deg, $bg-light2 25%, $bg-deep 95%);
         z-index: -1;
         transform: translateX(-50%);
         overflow-y: hidden !important;
@@ -54,7 +56,7 @@
     margin-top: -700px;
     position: relative;
     z-index: 5;
-    color: white;
+    color: $white;
     width: fit-content;
     width: 50%;
     display: grid;
@@ -104,7 +106,7 @@
     h1 {
         font-size: calc(7rem + 4vw);
         -webkit-background-clip: text;
-        background-image: linear-gradient(298deg, rgb(0, 234, 255) 0%, rgb(0, 111, 255) 99%, rgb(35, 130, 255) 100%);
+        background-image: $text-gradient;
         color: transparent;
         position: relative;
         height: fit-content;
@@ -113,7 +115,7 @@
 
         &::after {
             content: "per year paid in USDC";
-            color: white;
+            color: $white;
             font-size: 1.5rem;
             width: fit-content;
             white-space: nowrap;
@@ -129,7 +131,7 @@
         position: absolute;
         bottom: 34px;
         right: -40px;
-        color: #4194ec;
+        color: $text-blue;
     }
 }
 
@@ -155,7 +157,7 @@
 
     h3 {
         font-size: 1.5rem;
-        color: #4194ec;
+        color: $text-blue;
         margin-bottom: 1rem;
 
         span {
@@ -173,7 +175,7 @@
 
     h3 {
         font-size: 1.5rem;
-        color: #4194ec;
+        color: $text-blue;
         margin-bottom: 1rem;
 
         span {
@@ -203,7 +205,7 @@
 }
 
 .second-card>* {
-    color: white !important;
+    color: $white !important;
     position: relative;
     z-index: 2;
 }
@@ -222,7 +224,7 @@
         font-weight: 500;
         line-height: 150%;
         margin: .75rem 0 2rem 0;
-        color: #A0A9BE;
+        color: $dimmed-white;
     }
 }
 
@@ -250,7 +252,7 @@
         h2 {
             font-size: calc(3rem + 3vw);
             font-weight: 600;
-            color: #4194ec;
+            color: $text-blue;
         }
 
         p {
@@ -273,7 +275,7 @@
     font-weight: 600;
     font-size: 4rem;
     -webkit-background-clip: text;
-    background-image: linear-gradient(298deg, rgba(0, 234, 255, 1) 0%, rgba(0, 111, 255, 1) 99%, rgba(35, 130, 255, 1) 100%);
+    background-image: $text-gradient;
     color: transparent;
     letter-spacing: 3px;
     opacity: 0;
@@ -290,7 +292,7 @@
         border: 1px solid white;
         margin: 2rem auto;
         font-size: 1.5rem;
-        color: white;
+        color: $white;
         text-align: center;
         width: 400px;
         transition: all .5s ease-in-out;
@@ -317,90 +319,3 @@
     top: -140px;
 }
 
-@media (max-width: 1000px){
-
-    .card-translation{
-        transform: translateX(150px);
-    }
-
-    .first-text{
-        width:100%;
-        backdrop-filter: blur(5px);
-        border-radius: 20px;
-        background-color:  rgba(1, 1, 1, 0.7);
-        padding: 2rem 0;
-        align-self: center;
-        margin-left: 0;
-    }
-
-    .left, .right{
-        
-        h3{
-            font-size: 1rem;
-            text-align: center;
-
-            span{
-                font-size: 2rem;
-            }
-        }
-    }
-
-    .second-card{
-        width:100%;
-        margin: 0 auto;
-        backdrop-filter: blur(5px);
-        border-radius: 20px;
-        background-color: rgba(1, 1, 1, 0.7);
-        padding: 3rem 2rem
-    }
-}
-
-@media (max-width: 600px){
-
-    .main-text{
-
-        h1{
-
-            font-size: 6rem;
-
-            span{
-                right: -15px;
-                bottom: 20px;
-            }
-
-            &::after{
-                bottom: -35px;
-            }
-        }
-    }
-
-    .second-card{
-        padding: 0;
-    }
-
-    #earning-button{
-        width: 70%;
-        margin: 0 auto;
-        
-        button{
-            font-size: 1rem;
-            white-space: nowrap;
-            width: 200px;
-            padding: 1rem 0;
-        }
-    }
-
-    #arrow{
-        transform: translate(5px, -2px);
-    }
-
-    .icons{
-
-        div{
-
-            img{
-                width: 100px;
-            }
-        }
-    }
-}
