Refactoring some styles

--- a/src/components/crypto-prices/market-banner.scss
+++ b/src/components/crypto-prices/market-banner.scss
@@ -1,5 +1,4 @@
-@import "./variables.scss";
-@import "./mobile1.scss";
+@import "../../styles/variables.scss";
 
 .market-banner{
     background-color: $bg-mid;
@@ -191,4 +190,39 @@
     text-decoration: none;
     color: $white;
     width: 100%;
+}
+
+
+@media(max-width: 960px){
+
+    .coin-base{
+        padding: 0;
+
+        h2{
+            margin: 1rem auto;
+        }
+    }
+    .api-table{
+        height: 720px;
+        width: 850px;
+        margin: 0 auto;
+        overflow-x: scroll !important;
+    }
+
+    .row{
+        width: 850px;
+    }
+
+    .heading{
+    display: none;
+    }
+}
+
+@media(max-width: 750px){
+    .top-coins{
+        flex-wrap: wrap;
+        div{
+            flex-basis: 50%;
+        }
+    }
 }
