--- a/src/Pages/individual-coin.scss
+++ b/src/Pages/individual-coin.scss
@@ -1,5 +1,3 @@
-@import "./mobile0.scss";
-
 .individual-page{
     background: linear-gradient(90deg, rgba(11,20,38,1) 0%, rgba(29,86,119,1) 100%);
     height: 100%;
@@ -114,4 +112,29 @@
     justify-content: space-between;
     margin: 2rem;
     font-size: 1.25rem;
+}
+
+@media(max-width: 750px){
+    .coin-description{
+        width: 90%;
+    }
+
+    .back-btn{
+        top: 3rem;
+        left: 3rem;
+    }
+
+    .intro-coin{
+
+        img{
+            width: 200px;
+        }
+    }
+
+    .coin-description{
+
+        p{
+            font-size: 1.1rem;
+        }
+    }
 }
