--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -79,11 +79,12 @@
 
     .nav-container-mobile{
         display: flex;
-        width: 80%;
-        justify-content: space-between;
+        width: 100%;
+        justify-content: space-around;
         align-items: center;
         background-color: $bg-deep;
         height: 100%;
+        
         img{
             height: 40px;
             cursor: pointer;
@@ -92,38 +93,57 @@
         li{
             color: $white;
             list-style: none;
-            transform: scale(2);
             cursor: pointer;
         }
     }
 
     .mobile-ul{
         display: flex;
-        top: 110px;
+        top: 112px;
         position: fixed;
         width: 100%;
-        height: 220px;
         background: $bg-deep;
         left: 0;
         z-index: 999;
         align-items: center;
         flex-direction: column;
-        gap: 2rem;
-        transform: translateY(-320px);
-        transition: all .5s ease-in-out;
+        transform: translateY(-350px);
+        transition: all .35s ease-in-out;
         z-index: -1;
+
         li {
+            position: relative;
             width: fit-content; 
-            margin-top: 1.5rem;
+            width: 100%;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            &::after{
+                content: "";
+                width: 100%;
+                height: 1px;
+                display: block;
+                position: absolute;
+                background-color: rgba(151, 151, 151, 0.685);
+                bottom: 0;
+            }
             a{
+                font-size: 20px;
                 color: $white;
                 text-decoration: none;
+                width: 100%;
+                height: 100%;
+                padding: 30px 0;
             }
         }
     }
 
     .shown{
         transform: translateY(0px);
-        transition: all .5s ease-in-out;
+        transition: all .35s ease-in-out;
+    }
+
+    #menu-icon{
+        transform: scale(2);
     }
 }
