Adding portfolio and login pages details

--- a/client/src/components/footer/footer.scss
+++ b/client/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
     position: relative;
     z-index: 99;
     width: 100%;
-    color: rgb(182, 182, 182);
+    color: $dimmed-text-white;
     background-color: $bg-main;
     border-top: 1px solid rgb(124, 124, 124);
 }
