--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -22,6 +22,14 @@ $white: #fbfbfb;
 
 $dimmed-white: #A0A9BE;
 
+$dimmed-text-white: #b6b6b6;
+
+$dimmed-white-trans: #a0a9be80;
+
+$visible-grey: #1b232d;
+
+$darker-grey: #0d1217;
+
 //Not currently used...
 
 $nav-main: #0f051d;
