--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables.scss";
 
-.navbar { 
+.navbar {
     height: 70px;
     background-color: $bg-deep;
     width: 100%;
@@ -9,15 +9,15 @@
     justify-content: space-around;
     border-bottom: 1px solid rgba(151, 151, 151, 0.685);
     position: fixed;
-    z-index: 999;
+    z-index: 9999;
     top: 0;
 }
 
-.nav-container-mobile{
+.nav-container-mobile {
     display: none;
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     align-items: center;
     width: 80%;
@@ -30,20 +30,20 @@
         width: auto;
     }
 
-    ul{
+    ul {
         color: $white;
         list-style: none;
         display: flex;
         gap: 4rem;
         font-size: 1.2rem;
         font-weight: 300;
-        
-        a{
+
+        a {
             text-decoration: none;
             color: inherit;
             position: relative;
 
-            &::after{
+            &::after {
                 content: "";
                 width: 0%;
                 background: $text-gradient;
@@ -53,11 +53,10 @@
                 left: 0;
                 transition: .3s all ease-in-out;
             }
-    
-            &:hover{
-    
-    
-                &::after{
+
+            &:hover {
+
+                &::after {
                     content: "";
                     width: 100%;
                     transition: .3s all ease-in-out;
@@ -67,37 +66,110 @@
     }
 }
 
-.hide{
+.hide {
     display: none;
 }
 
+#profile-li {
+    position: relative;
+    
+    a{
+        &:hover{
+            &::after{
+                width: 0% !important;
+            }
+        }
+    }
 
-@media(max-width: 900px){
-    .nav-container{
+    ul {
+        position: absolute;
+        background-color: $darker-grey;
+        left: 50%;
+        top: 50px;
+        transform: translateX(-50%);
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        justify-content: space-around;
+        text-align: center;
+        border: 2px solid $dimmed-white;
+        border-radius: 5px;
+
+        &::after {
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 50%;
+            transform: translateX(-50%) rotate(45deg);
+            top: -12px;
+            position: absolute;
+            background-color: $darker-grey;
+            border-top: 2px solid $dimmed-white;
+            border-left: 2px solid $dimmed-white;
+        }
+
+        li {
+            color: $white;
+            font-size: 20px;
+            cursor: pointer;
+            transition: .3s all ease-in-out;
+            width: 100%;
+            height: 100%;
+            position: relative;
+
+            &::after {
+                content: "";
+                width: 100%;
+                height: 1px;
+                display: block;
+                position: absolute;
+                background-color: $dimmed-white-trans;
+                bottom: 0;
+            }
+
+            &:hover {
+                background-color: $bg-light;
+            }
+
+            a{
+                display: block;
+                width: 100%;
+                height: 100%;
+                padding: 35px 0px;
+            }
+        }
+    }
+}
+
+
+
+@media(max-width: 900px) {
+    .nav-container {
         display: none;
     }
 
-    .nav-container-mobile{
+    .nav-container-mobile {
         display: flex;
         width: 100%;
         justify-content: space-around;
         align-items: center;
         background-color: $bg-deep;
         height: 100%;
-        
-        img{
+
+        img {
             height: 40px;
             cursor: pointer;
         }
 
-        li{
+        li {
             color: $white;
             list-style: none;
             cursor: pointer;
         }
     }
 
-    .mobile-ul{
+    .mobile-ul {
         display: flex;
         top: 112px;
         position: fixed;
@@ -113,12 +185,13 @@
 
         li {
             position: relative;
-            width: fit-content; 
+            width: fit-content;
             width: 100%;
             text-align: center;
             display: flex;
             align-items: center;
-            &::after{
+
+            &::after {
                 content: "";
                 width: 100%;
                 height: 1px;
@@ -127,7 +200,8 @@
                 background-color: rgba(151, 151, 151, 0.685);
                 bottom: 0;
             }
-            a{
+
+            a {
                 font-size: 20px;
                 color: $white;
                 text-decoration: none;
@@ -138,12 +212,12 @@
         }
     }
 
-    .shown{
+    .shown {
         transform: translateY(0px);
         transition: all .35s ease-in-out;
     }
 
-    #menu-icon{
+    #menu-icon {
         transform: scale(2);
     }
 }
