Adding NFT table

--- a/client/src/components/crypto-prices/market-banner.scss
+++ b/client/src/components/crypto-prices/market-banner.scss
@@ -64,11 +64,12 @@
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     width: 100% !important;
     text-align: right;
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     place-content: center;
-    
+    box-sizing: border-box;
     h3{
         font-weight: 400;
+        height: 25px;
     }
   }
   
